--- a/style.css
+++ b/style.css
@@ -108,6 +108,12 @@ body {
 	font-weight: 400;
 }
 
+.title p{
+    color: #3E5C76;
+    font-weight: 100;
+    
+}
+
 .steps h3{
 	color: #748CAB;
 }
@@ -124,40 +130,39 @@ body {
 .steps img{
   width: 100%;
   border-radius: 5%;
+    margin-bottom: 5rem;
 }
 
 /*============= ABOUT =============*/
-.jumbotron{
 
-    background-color: #E3E2DF !important; 
-}
-.jumbotron h1{
-    font-family: 'Lato', sans-serif;
-	font-weight: 700; 
-	
-	color: #EE4C7C;
-	margin-bottom: 2rem;
+.fixed{
+    background-image: url(img/Jaz.jpeg);
+    z-index: -1; 
 }
 
-.jumbotron h3{
-    font-family: 'Lato', sans-serif;
-	font-weight: 400;
-	color: #9A1750;
-	letter-spacing: .1rem;
+.dark{
+  background-color: rgba(0,0,0,0.75);
+  color: white;
+  padding: 7rem 2rem; 
 }
 
-.jumbotron p{
-    font-family: 'Lato', sans-serif;
-	color: #5D001E; 
-    font-weight: 100; 
-    font-size: 1.2rem; 
-    margin-bottom: 2rem; 
+.dark h1{
+    font-weight: 700;
 }
 
-.jumbotron img{
-	width: 40rem;
-	height: 30rem;
+.dark svg.svg-inline--fa{
+    color: aquamarine;
 }
+
+.fixed-background h3{
+  margin-bottom: 2rem;
+}
+
+.fixed-background p{
+  margin-top: 1.5rem;
+
+}
+
 
 /*============= WAITLIST =============*/
 .waitlistInfo H1{
@@ -211,6 +216,35 @@ body {
 .subBut{
     margin-bottom: 3rem;
 }
+
+.jumbotron{
+
+    background-color: #E3E2DF !important; 
+}
+.jumbotron h1{
+    font-family: 'Lato', sans-serif;
+	font-weight: 700; 
+	
+	color: #EE4C7C;
+	margin-bottom: 2rem;
+}
+
+.jumbotron h3{
+    font-family: 'Lato', sans-serif;
+	font-weight: 400;
+	color: #9A1750;
+	letter-spacing: .1rem;
+}
+
+.jumbotron p{
+    font-family: 'Lato', sans-serif;
+	color: #5D001E; 
+    font-weight: 100; 
+    font-size: 1.2rem; 
+    margin-bottom: 2rem; 
+}
+
+
 
 
 
